<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.DetailActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detail_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        android:layout_margin="20dp"
        android:src="@drawable/setting"
        android:contentDescription="@string/content_desc_setting"/>

    <ImageButton
        android:id="@+id/detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:layout_margin="20dp"
        android:src="@drawable/back"
        android:contentDescription="@string/content_desc_back"/>

    <LinearLayout
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_no_name"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/detail_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_no_email"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_1"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_1"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="30dp"/>

            <TextView
                android:id="@+id/detail_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_2"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tab_2"
                android:textSize="18sp"
                android:textColor="@color/grey"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/detail_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_title"
        app:layout_constraintBottom_toTopOf="@id/detail_tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondary"/>

    <TextView
        android:id="@+id/detail_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_error"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_margin="60dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_title"
        app:layout_constraintBottom_toTopOf="@id/detail_tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_info"
        android:layout_marginTop="20dp"
        android:background="@color/primary"
        app:tabTextColor="@color/grey"
        app:tabSelectedTextColor="@color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detail_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detail_tabs"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>